--- a/app/src/main/res/layout/member.xml
+++ b/app/src/main/res/layout/member.xml
@@ -218,7 +218,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:onClick="reset"
                         android:background="@android:color/holo_orange_light"
                         android:text="@string/member_reset"
                         android:textColor="@android:color/black"
