Members list is displayed from database

--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -16,5 +16,12 @@
         android:text="@string/new_member"
         android:textSize="24sp" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/member_list_view">
+
+    </ListView>
+
 
 </LinearLayout>
