--- a/app/src/main/res/layout/member.xml
+++ b/app/src/main/res/layout/member.xml
@@ -49,6 +49,29 @@
                         android:orientation="vertical">
 
                         <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/student_name"
+                            android:layout_gravity="center"
+                            android:layout_margin="5sp"
+                            android:hint="Student name"
+                            android:padding="5sp"
+                            android:textColorHint="@android:color/darker_gray"
+                            android:textSize="20dp" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/student_usn"
+                            android:layout_gravity="center"
+                            android:layout_margin="5sp"
+                            android:hint="Student usn"
+                            android:padding="5sp"
+                            android:textColorHint="@android:color/darker_gray"
+                            android:textSize="20dp" />
+
+
+                        <EditText
                             android:id="@+id/member_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -152,6 +175,7 @@
                             android:padding="5sp"
                             android:textColorHint="@android:color/darker_gray"
                             android:textSize="20dp" />
+
 
                         <TextView
                             android:id="@+id/member_cards"
